Extender la funcionalidad de express

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "noImplicitAny": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "typeRoots": [
+      "./types"
+    ]
   }
 }
