--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
+    "typeorm": "^0.3.20"
   }
 }
