--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.0",
     "express": "^4.21.2",
     "pg": "^8.13.1",
     "typeorm": "^0.3.20",
